<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.algonquin.cst2335_finalproject.NutritionDetails">

    <TextView
        android:id="@+id/calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories" />

    <EditText
        android:id="@+id/enterCalories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Calories"
        android:inputType="number" />

    <TextView
        android:id="@+id/totalFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_fat" />

    <EditText
        android:id="@+id/enterTotalFat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Total Fat"
        android:inputType="number" />

    <TextView
        android:id="@+id/totalCarbohydrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_carbohydrate" />

    <EditText
        android:id="@+id/enterTotalCarbohydrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Total Carbohydrate"
        android:inputType="number" />

    <Button
        android:id="@+id/Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_info"/>

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_info"/>

</LinearLayout>
